--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import Features from '~/components/widgets/Features.astro';
 import Features2 from '~/components/widgets/Features2.astro';
 import Steps from '~/components/widgets/Steps.astro';
 import Content from '~/components/widgets/Content.astro';
-import LatestPosts from '~/components/blog/LatestPosts.astro';
+import HighlightedPosts from '~/components/blog/HighlightedPosts.astro';
 import FAQs from '~/components/widgets/FAQs.astro';
 import Stats from '~/components/widgets/Stats.astro';
 import CallToAction from '~/components/widgets/CallToAction.astro';
@@ -71,12 +71,13 @@ const meta = {
   />
 
   <div class="bg-white dark:bg-slate-900">
-  <LatestPosts
-    title="Here's some of my most recent projects and posts"
+  <HighlightedPosts
+    title="Check out some of my work"
     postIds={[
-      'useful-resources-to-create-websites.md',
-      'astrowind-template-in-depth.md',
+      'projects/2022-mccombs-marketing-challenge.mdx',
+      'projects/cleaning-iowa-liquor-sales-data.mdx',
     ]}
+    allPostsText="View more"
   />
     </div>
   
