Made it so title was part of Hero3 and not a fragment

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,15 +26,14 @@ const meta = {
     callToAction={{ text: "Let's Chat", href: '/contact', icon: 'ph:chats-circle-bold' }}
     callToAction2={{ text: 'About Me', href: '/resume', icon: 'ph:arrow-right-bold'}}
     image={{ src: import('../assets/images/profile.jpg'), alt: 'Jonathan Falcon smiling and not looking directly at camera. Backdrop is of Texas State University' }}
+    subtitle="As a marketing analyst, I leverage my multidisciplinary background to give you the most holistic understanding of your customers."
   >
     <Fragment slot="title">
       Hi, I'm <br />
       <span class="text-nugget-500 dark:text-nugget-400"> Jonathan Falcon</span>
     </Fragment>
 
-    <Fragment slot="subtitle">
-      <span class="block mb-1">As a marketing analyst, I leverage my multidisciplinary background to give you the most holistic understanding of your customers.</span>
-    </Fragment>
+    
   </Hero3>
   
   <Features
