--- a/src/components/blog/HighlightedPosts.astro
+++ b/src/components/blog/HighlightedPosts.astro
@@ -29,7 +29,7 @@ const posts = await findPostsByIds(postIds);
       {
         title && (
           <h2
-            class="text-3xl font-bold sm:text-4xl group font-serif mb-2"
+            class="text-4xl font-bold sm:text-6xl group font-serif mb-2"
             set:html={title}
           />
         )
@@ -37,7 +37,7 @@ const posts = await findPostsByIds(postIds);
       {
         allPostsText && allPostsLink && (
           <a
-            class="text-muted dark:text-slate-400 hover:text-primary transition duration-200 block mb-6 md:mb-0"
+            class="text-muted dark:text-slate-300 dark:hover:text-spring-green-400 hover:text-spring-green-500 transition duration-200 mb-6 lg:mb-0 text-xl"
             href={allPostsLink}
           >
             {allPostsText} »
@@ -46,7 +46,7 @@ const posts = await findPostsByIds(postIds);
       }
     </div>
 
-    {information && <p class="text-muted dark:text-slate-400 lg:text-sm lg:max-w-md" set:html={information} />}
+    {information && <p class="text-gray-800 dark:text-slate-200 lg:max-w-md" set:html={information} />}
   </div>
 
   <Grid posts={posts} />
