--- a/src/components/blog/HighlightedPosts.astro
+++ b/src/components/blog/HighlightedPosts.astro
@@ -25,7 +25,7 @@ const posts = await findPostsByIds(postIds);
 
 <section class="px-4 py-16 mx-auto max-w-7xl lg:py-20">
   <div class="flex flex-col lg:justify-between lg:flex-row mb-8">
-    <div class="md:max-w-sm">
+    <div class="md:max-w-3xl">
       {
         title && (
           <h2
