Modified dimensions, padding, etc. of assets to fit better on page

--- a/src/components/widgets/Hero3.astro
+++ b/src/components/widgets/Hero3.astro
@@ -26,11 +26,11 @@ const {
 } = Astro.props;
 ---
 
-<section class="relative md:-mt-[76px] dark:bg-resume-dark bg-resume">
+<section class="relative md:-mt-[60px] dark:bg-resume-dark bg-resume">
   <div class="absolute inset-0 pointer-events-none" aria-hidden="true"></div>
-  <div class="relative max-w-7xl mx-auto px-4 sm:px-6">
-    <div class="pt-0 md:pt-[50px] pointer-events-none"></div>
-    <div class="py-8 md:py-20 lg:py-0 lg:flex lg:flex-row-reverse lg:items-center lg:min-h-screen lg:gap-8">
+  <div class="relative max-w-[88rem] mx-auto px-4 sm:px-6">
+    <div class="pt-0 lg:pt-0 md:pt-[50px] pointer-events-none"></div>
+    <div class="py-8 md:py-16 lg:py-0 lg:flex lg:flex-row-reverse lg:items-center lg:min-h-screen lg:gap-8">
       <div class="basis-2/5">
         {
           image && (
@@ -39,7 +39,7 @@ const {
                 <Fragment set:html={image} />
               ) : (
                 <Picture
-                  class="mx-auto lg:rounded-[4rem] md:rounded-[3rem] rounded-[2rem] lg:w-full lg:max-w-[400px] w-[80%] md:mb-0 mb-5 lg:aspect-[2/3] aspect-[5/4] object-cover object-[left_50%_top_50%] shadow-stone-600/50 dark:shadow-slate-500/50 shadow-4xl"
+                  class="mx-auto lg:rounded-[4rem] md:rounded-[3rem] rounded-[2rem] lg:w-full lg:max-w-[400px] w-[80%] lg:mb-0 mb-5 lg:aspect-[2/3] aspect-[5/4] object-cover object-[left_50%_top_50%] shadow-stone-600/50 dark:shadow-slate-500/50 shadow-4xl"
                   widths={[768, 1500, 2500, 3000]}
                   sizes="(max-width: 1499px) 768px, (max-width: 2499px) 1500px, (max-width: 2999px) 2500px, 3000px"
                   aspectRatio={3 / 2}
