--- a/src/components/widgets/Contact.astro
+++ b/src/components/widgets/Contact.astro
@@ -106,7 +106,7 @@ const {
       <div class="relative basis-1/2 w-full h-fit md:p-10 px-6 py-4 lg:rounded-[1.5rem] rounded-2xl bg-gray-200 dark:bg-rich-black shadow-2xl shadow-slate-600/20 border-gray-300 dark:border-slate-700 border-2">
         <form name="contact" id="form" action="https://script.google.com/macros/s/AKfycbxueXZ-idc-kiZW_otSSjk5m3DSYWATDFFEs-GzZorH7qcqDBgMv0PSvKrLsloVdUY-/exec" class="space-y-8 transition duration-300">
           <div class="flex flex-wrap -mx-3">
-              <div class="w-full md:w-1/2 px-3">
+              <div class="w-full md:w-1/2 px-3 md:mb-0 mb-4">
                 <label for="firstName" class="block mb-2 font-bold md:text-2xl text-xl text-rich-black dark:text-white">First Name</label>
                 <input type="text" name="firstName" id="firstName" class="block p-2.5 w-full text-lg bg-gray-50 rounded-xl border-gray-300 shadow-sm focus:outline-none focus:border-rich-black dark:bg-slate-700 dark:border-slate-500 dark:placeholder-gray-200 dark:text-white dark:focus:border-slate-100 border-4" placeholder="First" required>
               </div>
