Updated button to be consistent with rest of site

--- a/src/components/widgets/Contact.astro
+++ b/src/components/widgets/Contact.astro
@@ -123,7 +123,7 @@ const {
             <label for="message" class="block mb-2 font-bold md:text-2xl text-xl text-rich-black dark:text-white">Optional Message</label>
             <textarea name="message" id="message" rows="4" class="block p-2.5 w-full text-lg bg-gray-50 rounded-xl shadow-sm border-gray-300 focus:outline-none focus:border-rich-black dark:bg-slate-700 dark:border-slate-500 dark:placeholder-gray-200 dark:text-white dark:focus:border-slate-100 border-4" placeholder="Leave a comment..."></textarea>
           </div>
-          <button type="submit" class="py-3 px-8 text-2xl text-center rounded-xl bg-spring-green-500 sm:w-fit hover:bg-spring-green-800 focus:ring-4 focus:outline-none focus:ring-spring-green-300 dark:bg-spring-green-500 dark:hover:bg-spring-green-700 dark:focus:ring-spring-green-800 transition duration-200 text-white font-bold">Send</button>
+          <button type="submit" class="ml-auto flex btn btn-primary text-2xl">Send<Icon name="ph:paper-plane-right-bold" class="w-6 h-6 ml-3 -mr-1" /></button>
         </form>
         <div id="completion-msg" class="opacity-0 pointer-events-none absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 transition duration-300 block justify-items-center text-3xl font-bold text-center">
           <Icon name="ph:confetti" class="h-fit w-fit"/>
