--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -27,8 +27,8 @@ const meta = {
 <Layout {meta}>
   <Contact>
     <Fragment slot="title">
-      Send a message <br />
-      <span class="text-spring-green-500 dark:text-spring-green-400"> or see my profiles</span>
+      Hey, let's<br />
+      <span class="text-spring-green-500 dark:text-spring-green-400">chat for a bit</span>
     </Fragment>
     
   </Contact>
