--- a/src/assets/styles/base.css
+++ b/src/assets/styles/base.css
@@ -25,7 +25,7 @@
 
   
   .btn {
-    @apply inline-flex items-center justify-center rounded-full shadow-md border-gray-400 border bg-transparent text-center text-base text-page transition py-3.5 px-6 md:px-8 duration-200 focus:ring-spring-green-500 focus:ring-offset-spring-green-200 focus:ring-2 focus:ring-offset-2 hover:bg-gray-300 hover:border-gray-600 dark:text-slate-300 dark:border-slate-500 dark:hover:bg-slate-800 dark:hover:border-slate-800;
+    @apply inline-flex items-center justify-center rounded-full shadow-md border-gray-700 border-2 bg-transparent text-center text-base text-page transition py-3.5 px-6 md:px-8 duration-200 focus:ring-spring-green-500 focus:ring-offset-spring-green-200 focus:ring-2 focus:ring-offset-2 hover:bg-gray-700 hover:text-white dark:text-slate-100 dark:border-slate-400 dark:hover:bg-slate-100 dark:hover:border-slate-100 dark:hover:text-rich-black;
   }
 
   .btn-ghost {
@@ -33,7 +33,7 @@
   }
 
   .btn-primary {
-    @apply font-bold bg-spring-green-500 text-white border-spring-green-500 hover:bg-spring-green-800 hover:border-spring-green-800 hover:text-white dark:text-white dark:bg-spring-green-500 dark:border-spring-green-500 dark:hover:border-spring-green-800 dark:hover:bg-spring-green-800;
+    @apply font-bold bg-spring-green-500 text-white dark:hover:text-white border-spring-green-500 hover:bg-spring-green-800 hover:border-spring-green-800 hover:text-white dark:text-white dark:bg-spring-green-500 dark:border-spring-green-500 dark:hover:border-spring-green-800 dark:hover:bg-spring-green-800;
   }
 
   .btn-secondary {
