--- a/src/pages/[...blog]/[...page].astro
+++ b/src/pages/[...blog]/[...page].astro
@@ -22,7 +22,7 @@ const { page } = Astro.props;
 const currentPage = page.currentPage ?? 1;
 
 const meta = {
-  title: `Blog${currentPage > 1 ? ` - Page ${currentPage}` : ''}`,
+  title: `Work${currentPage > 1 ? ` - Page ${currentPage}` : ''}`,
   description: SITE.description,
   noindex: BLOG?.list?.noindex || currentPage > 1,
   ogType: 'blog',
