--- a/src/pages/[...blog]/[...page].astro
+++ b/src/pages/[...blog]/[...page].astro
@@ -30,7 +30,7 @@ const meta = {
 ---
 
 <Layout {meta}>
-  <section class="px-6 sm:px-6 py-12 sm:py-16 lg:py-20 mx-auto max-w-5xl">
+  <section class="px-6 sm:px-6 py-12 sm:py-16 lg:py-20 mx-auto xl:max-w-6xl max-w-5xl">
     <Headline
       subtitle="The proof's in the pudding, right?"
     >
