--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -6,14 +6,14 @@ import { getImage } from '@astrojs/image';
 const title = `Error 404`;
 ---
 <Layout meta={{ title }}>
-  <section class={`flex items-center h-[calc(100vh-150px)] py-16 bg-center bg-cover bg-[url("/404.webp")]`}>
+  <section class={`flex items-center min-h-[calc(100svh-60px)] bg-bottom bg-cover bg-[url("/404.webp")]`}>
     <div class="container flex flex-col items-center justify-center px-20 mx-auto my-8">
-      <div class="max-w-md text-center drop-shadow">
-        <h2 class="mb-0 md:mt-0 mt-20 font-bold text-9xl">
+      <div class="max-w-xl text-center drop-shadow">
+        <h2 class="mb-0 md:mt-0 mt-28 font-bold text-9xl">
           <span class="sr-only">Error</span>
           <span class="text-white">404</span>
         </h2>
-        <p class="text-xl text-white mt-4 mb-8">Sorry, chief, we couldn't find that page.</p>
+        <p class="text-xl text-white mt-4 mb-10">Sorry, chief, we couldn't find that page.</p>
         
         <a rel="noopener noreferrer" href={getHomePermalink()} class="btn btn-secondary ml-4 text-white">Back to Home</a>
 
