--- a/src/components/common/BasicScripts.astro
+++ b/src/components/common/BasicScripts.astro
@@ -38,9 +38,9 @@ import { SITE } from '~/config.mjs';
     attachEvent('[data-aw-toggle-menu]', 'click', function (_, elem) {
       elem.classList.toggle('expanded');
       document.body.classList.toggle('overflow-hidden');
-      document.getElementById('header')?.classList.toggle('h-screen');
-      document.querySelector('#header nav')?.classList.toggle('hidden');
-    });
+      document.querySelector('#header nav')?.classList.toggle('h-screen');
+      document.querySelector('#header nav')?.classList.toggle('opacity-100');
+      });
 
     attachEvent('[data-aw-toggle-color-scheme]', 'click', function () {
       if (defaultTheme.endsWith(':only')) {
@@ -113,7 +113,7 @@ import { SITE } from '~/config.mjs';
       elem.classList.remove('expanded');
     }
     document.body.classList.remove('overflow-hidden');
-    document.getElementById('header')?.classList.remove('h-screen');
-    document.querySelector('#header nav')?.classList.add('hidden');
+    document.querySelector('#header nav')?.classList.add('h-0');
+    document.querySelector('#header nav')?.classList.add('opacity-0');
   };
 </script>
