Updated with extension for small screen minus nav height and fallback for screen minus nav height

--- a/src/components/widgets/Contact.astro
+++ b/src/components/widgets/Contact.astro
@@ -26,7 +26,7 @@ const {
 } = Astro.props;
 ---
 
-<section class="relative dark:bg-resume-dark bg-resume lg:content-center lg:grid lg:min-h-[calc(100vh-60px)]">
+<section class="relative dark:bg-resume-dark bg-resume lg:content-center lg:grid lg:min-h-small-screen-minus-nav">
   <div class="relative max-w-[88rem] mx-auto px-4 sm:px-10 md:px-20 w-full">
     <div class="py-8 lg:flex lg:items-center xl:gap-20 lg:gap-10">
       <div class="basis-1/2 mx-auto">
