--- a/src/components/widgets/Hero3.astro
+++ b/src/components/widgets/Hero3.astro
@@ -26,7 +26,7 @@ const {
 } = Astro.props;
 ---
 
-<section class="relative dark:bg-resume-dark bg-resume lg:items-center lg:grid lg:min-h-[calc(100vh-60px)]">
+<section class="relative dark:bg-resume-dark bg-resume lg:items-center lg:grid lg:min-h-small-screen-minus-nav">
   <div class="relative max-w-[88rem] mx-auto px-4 sm:px-6">
     <div class="lg:flex lg:flex-row-reverse lg:items-center lg:gap-8 py-8">
       <div class="basis-2/5">
