--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -7,7 +7,7 @@ import { Icon } from "astro-icon";
 const title = `Error 404`;
 ---
 <Layout meta={{ title }}>
-  <section class={`flex items-center min-h-[calc(100svh-60px)] bg-center bg-cover bg-[url("/404.webp")]`}>
+  <section class={`flex items-center min-h-small-screen-minus-nav bg-center bg-cover bg-[url("/404.webp")]`}>
     <div class="container flex flex-col items-center justify-center px-20 mx-auto my-8">
       <div class="max-w-xl text-center drop-shadow">
         <h2 class="mb-0 md:mt-0 mt-28 font-bold text-9xl">
