Removed duplicate, removed "shortcut" from favicon, and added image type

--- a/src/components/common/MetaTags.astro
+++ b/src/components/common/MetaTags.astro
@@ -97,8 +97,7 @@ const currentPath = pathname.slice(1); // remove the first "/"
 
 <link rel="icon" type="image/svg+xml" href={getAsset('/favicon.svg')} />
 <link rel="mask-icon" href={getAsset('/favicon.svg')} color="#2C6E49" />
-<link rel="shortcut icon" sizes="16x16" href={getAsset('/favicon.ico')} />
-<link rel="shortcut icon" sizes="16x16" href={getAsset('/favicon.ico')} />
+<link rel="icon" type="image/x-icon" sizes="16x16" href={getAsset('/favicon.ico')} />
 <link rel="apple-touch-icon" sizes="180x180" href={getAsset('/apple-touch-icon.png')}>
 <link rel="icon" type="image/png" sizes="32x32" href={getAsset('/favicon-32x32.png')}>
 <link rel="icon" type="image/png" sizes="16x16" href={getAsset('/favicon-16x16.png')}>
