--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -3,6 +3,7 @@ import '~/assets/styles/base.css';
 
 import MetaTags from '~/components/common/MetaTags.astro';
 import BasicScripts from '~/components/common/BasicScripts.astro';
+import StructuredData from '~/components/common/StructuredData.astro';
 
 import { MetaSEO } from '~/types';
 import { SITE } from '~/config.mjs';
@@ -71,5 +72,6 @@ const { language = 'en', textDirection = 'ltr' } = SITE;
         content-visibility: auto;
       }
     </style>
+  <StructuredData/>
   </body>
 </html>
