--- a/src/components/blog/ListItem.astro
+++ b/src/components/blog/ListItem.astro
@@ -23,12 +23,10 @@ const link = !BLOG?.post?.disabled ? getPermalink(post.permalink, 'post') : '';
 <article class={`max-w-md mx-auto md:max-w-none grid gap-6 md:gap-8 ${image ? 'md:grid-cols-2' : ''}`}>
   {
     image && (
-      <a class="relative block group" href={link ?? 'javascript:void(0)'}>
-        <div class="relative pb-[56.25%] lg:pb-[56.25%] overflow-hidden bg-gray-400 dark:bg-slate-700 rounded-3xl shadow-xl hover:scale-[1.05] active:scale-[1] transition duration-300">
-          {image && (
+      <a class="relative pb-[56.25%] overflow-hidden bg-gray-400 dark:bg-slate-700 rounded-3xl shadow-xl hover:scale-[1.05] active:scale-[1] transition duration-300" href={link ?? 'javascript:void(0)'}>
             <Picture
               src={image}
-              class="absolute inset-0 object-contain w-full h-full mb-6 rounded bg-gray-400 dark:bg-slate-700"
+              class="absolute inset-0 object-contain w-full h-full rounded bg-gray-400 dark:bg-slate-700"
               widths={[400, 900, 1400]}
               sizes="(max-width: 900px) 400px, (max-width: 1400px) 900px, 1400px"
               alt={post.title}
@@ -37,8 +35,6 @@ const link = !BLOG?.post?.disabled ? getPermalink(post.permalink, 'post') : '';
               loading="lazy"
               decoding="async"
             />
-          )}
-        </div>
       </a>
     )
   }
@@ -61,7 +57,7 @@ const link = !BLOG?.post?.disabled ? getPermalink(post.permalink, 'post') : '';
           }
         </span>
       </div>
-      <h2 class="text-2xl sm:text-3xl font-bold mb-2 font-serif">
+      <h2 class="text-2.5xl sm:text-4xl font-bold mb-2 font-serif">
         {
           link ? (
             <a class="hover:text-primary dark:hover:text-spring-green-400 transition duration-200" href={link}>
