--- a/src/pages/chart.astro
+++ b/src/pages/chart.astro
@@ -7,6 +7,7 @@ import Chart from "chart.js/auto";
 const meta = {
   title: 'Chart Examples',
   description: SITE.description,
+  noindex: true,
   };
 ---
 <Layout {meta}>
