--- a/src/components/blog/ToBlogLink.astro
+++ b/src/components/blog/ToBlogLink.astro
@@ -5,6 +5,6 @@ import { getBlogPermalink } from '~/utils/permalinks';
 
 <div class="mx-auto px-6 sm:px-6 max-w-4xl pt-8 md:pt-4 pb-12 md:pb-20">
   <a class="btn px-3 md:px-3 shadow-none border-none" href={getBlogPermalink()}
-    ><Icon name="ph:caret-left-fill" class="w-5 h-5 mr-1 -ml-1.5" /> Back to Blog</a
+    ><Icon name="ph:caret-left-fill" class="w-5 h-5 mr-1 -ml-1.5" /> More of My Work</a
   >
 </div>
