--- a/src/components/blog/ListItem.astro
+++ b/src/components/blog/ListItem.astro
@@ -20,13 +20,13 @@ const image = await findImage(post.image);
 const link = !BLOG?.post?.disabled ? getPermalink(post.permalink, 'post') : '';
 ---
 
-<article class={`max-w-md mx-auto md:max-w-none grid gap-6 md:gap-8 ${image ? 'md:grid-cols-2' : ''}`}>
+<article class={`max-w-md mx-auto md:max-w-none grid gap-6 md:gap-8 items-start ${image ? 'md:grid-cols-2' : ''}`}>
   {
     image && (
-      <a class="relative pb-[56.25%] overflow-hidden bg-gray-400 dark:bg-slate-700 rounded-3xl shadow-xl hover:scale-[1.05] active:scale-[1] transition duration-300" href={link ?? 'javascript:void(0)'}>
+      <a class="relative hover:scale-[1.05] active:scale-[1] transition duration-300" href={link ?? 'javascript:void(0)'}>
             <Picture
               src={image}
-              class="absolute inset-0 object-contain w-full h-full rounded bg-gray-400 dark:bg-slate-700"
+              class="w-full h-full rounded-3xl shadow-xl bg-gray-400 dark:bg-slate-700"
               widths={[400, 900, 1400]}
               sizes="(max-width: 900px) 400px, (max-width: 1400px) 900px, 1400px"
               alt={post.title}
