--- a/src/components/common/ToggleMenu.astro
+++ b/src/components/common/ToggleMenu.astro
@@ -11,8 +11,8 @@ export interface Props {
 const {
   label = 'Toggle Menu',
   class:
-    className = 'ml-1.5 dark:text-white hover:bg-black/10 dark:hover:bg-white/20 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-2.5 inline-flex items-center transition',
-  iconClass = 'w-6 h-6',
+    className = 'ml-1.5 dark:text-white hover:bg-slate/10 dark:hover:bg-white/20 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-2.5 inline-flex items-center transition',
+  iconClass = 'w-6 h-6 icon-bold',
   iconName = 'tabler:menu',
 } = Astro.props;
 ---
